Style fix: Font Update on Mobile

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -37,8 +37,8 @@ h1 {
 }
 
 h2 {
-  font-size: $typographic-base-font-size * 1.6875;
-  @include line-height(1.5);
+  font-size: $typographic-base-font-size * 1.4;
+  @include line-height(1.3);
   @include margin-top(2);
   @include margin-bottom(0.5);
 }
