--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -40,8 +40,8 @@
     margin-right: auto;
 
     & p {
-      font-size: $typographic-base-font-size * 1.1;
-      @include line-height(1.3);
+      font-size: $typographic-base-font-size * 1;
+      @include line-height(1.15);
       @include margin-bottom(1.125);
     }
 
